<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/check_skills_against_creature_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/gamer_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="#EAE0E0"
        android:backgroundTint="#ECDFDF"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/parameter"
            android:inputType="number"
            android:textSize="@dimen/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/skill"
            android:inputType="number"
            android:textSize="@dimen/hint">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/check_modifier" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/gamer_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="#EAE0E0"
        android:backgroundTint="#ECDFDF"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/parameter"
            android:inputType="number"
            android:textSize="@dimen/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/skill"
            android:inputType="number"
            android:textSize="@dimen/hint">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/check_modifier"
            android:inputType="number"
            android:textSize="@dimen/hint" />
    </LinearLayout>

    <Button
        android:id="@+id/sum_creature_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/check_skills_against_situations_text_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="#EAE0E0"
        android:backgroundTint="#ECDFDF"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/parameter"
            android:inputType="number"
            android:textSize="@dimen/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/skill"
            android:inputType="number"
            android:textSize="@dimen/hint">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="+"
            android:textSize="@dimen/hint" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cube"
            android:inputType="number"
            android:textSize="@dimen/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text=">"
            android:textSize="@dimen/hint" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/difficulty_level"/>

    </LinearLayout>

    <Button
        android:id="@+id/sum_situation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty_value" />

    <TableLayout
        style="@style/tableLayoutStyle"
        android:background="#100F0F"
        android:backgroundTint="#1C1C1C"
        android:baselineAligned="false"
        android:foregroundTint="#232222">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                android:layout_width="81dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/difficulty_level" />

            <TextView
                android:layout_width="268dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/description" />

            <TextView
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/difficulty" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:text="@string/simple"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:layout_width="265dp"
                android:text="@string/simple_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/simple_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:text="@string/everyday"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:layout_width="wrap_content"
                android:text="@string/everyday_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/everyday_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:text="@string/difficult"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:text="@string/difficult_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/difficult_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:text="@string/professional"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:text="@string/professional_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/simple_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:text="@string/heroic"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:text="@string/heroic_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/heroic_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336">

            <TextView
                style="@style/tableTextViewValues"
                android:background="#F44336"
                android:text="@string/legendary"
                android:textSize="@dimen/difficulty" />

            <TextView
                style="@style/tableTextViewDescriptions"
                android:text="@string/legendary_description"
                android:textSize="@dimen/description" />

            <TextView
                style="@style/tableTextViewDifficulty"
                android:text="@string/legendary_level" />
        </TableRow>
    </TableLayout>
</LinearLayout>


